--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img style="max-width: 80px; margin-top: -35px"src="img/logo.png" alt="logo"/><p style="color: goldenrod; display: inline-flexbox; margin: -52px 0px 0px 100px; font-size: 40px;">Get Ahead</p> </a>
+                    <a class="navbar-brand" href="index.html"><img style="max-width: 80px; margin-top: -6%;"src="img/logo.png" alt="logo"/><p class = "navbar-brand-text" style="color: goldenrod; display: inline-flexbox; margin: -52px 0px 0px 100px; font-size: 40px;">Get Ahead</p> </a>
                 </div>
                 <div class="navbar-collapse collapse ">
                     <ul class="nav navbar-nav">
