--- a/courses.html
+++ b/courses.html
@@ -65,7 +65,7 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class=""><h3>  Courses We Offer</h3> Register Here: <a href="https://docs.google.com/forms/d/e/1FAIpQLScHFPQgrWG65zqSuElPnW4IkUBjaF1xsrb-Uo-ceYeqWs9bFQ/viewform?usp=dialog">https://forms.gle/ZzditaRPTMVKecnTA</a>
-				<br><hr></br> Each course will be held on their respective days of the week, from 2-7 pm EST. No courses will be held at the same time. The program start June 23rd, 2025 and will continue for 9 weeks, ending August 22nd. Course times are subject to change.
+				<br><hr></br> Each course will be held on their respective days of the week, from 2-7 pm EST, depending on student and tutor availability. We will take into account parent and student preferences. No courses will be held at the same time. The program start June 23rd, 2025 and will continue for 9 weeks, ending August 22nd. Course times are subject to change.
 				<span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>
 			</div>
 		</div>
