--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				<div class="aligncenter">
 					<h1 class="aligncenter">Our Featured Courses</h1>
 					<span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>
-					Get Ahead offers premium summer courses for kids elementary to high school. We excel in teaching content directly related to schoolwork in order to prepare kids and give them a head start in the upcoming school year.</div>
+					<p style = "font-size: 18px;">Get Ahead offers premium summer courses for kids elementary to high school. We excel in teaching content directly related to schoolwork in order to prepare kids and give them a head start in the upcoming school year.</p></div>
 				<br><hr></br>
 				<div class="aligncenter">Register Here: <a href="https://docs.google.com/forms/d/e/1FAIpQLScHFPQgrWG65zqSuElPnW4IkUBjaF1xsrb-Uo-ceYeqWs9bFQ/viewform?usp=dialog">https://forms.gle/ZzditaRPTMVKecnTA</a>
 				<p>Registrations are due June 20th, and June 21st is orientation</p></div>
