--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 				<div class="aligncenter">
 					<h1 class="aligncenter">Our Featured Courses</h1>
 					<span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>
-					<p style = "font-size: 18px;">Get Ahead offers premium summer courses for kids elementary to high school. We excel in teaching content directly related to schoolwork in order to prepare kids and give them a head start in the upcoming school year.</p></div>
+					<p style = "font-size: 18px;">Get Ahead offers premium summer courses for kids from elementary to high school. We excel in teaching content directly related to schoolwork, preparing kids for a head start in the upcoming school year.</p></div>
 				<br><hr></br>
 				<div class="aligncenter">Register Here: <a href="https://docs.google.com/forms/d/e/1FAIpQLScHFPQgrWG65zqSuElPnW4IkUBjaF1xsrb-Uo-ceYeqWs9bFQ/viewform?usp=dialog">https://forms.gle/ZzditaRPTMVKecnTA</a>
-				<p>Registrations are due June 20th, and June 21st is orientation</p></div>
+				<p>Registrations are open until August.</p></div>
 			</div>
 		</div>
 	</div>
@@ -109,7 +109,7 @@
 		</div>
 		<div class="col-md-4 text-center"> 
 		<span class="icons c2"><i class="fa fa-picture-o"></i></span> <div class="box-area">
-		<h3>Computer Science Principles</h3> <p class="icon-texts">Get Ahead offers computer science course ranging from basics to advanced programming. This course is a perfect mix of both for beginners.</p></div>
+		<h3>Computer Science Principles</h3> <p class="icon-texts">Get Ahead offers computer science courses ranging from basics to advanced programming. This course is a perfect mix of both for beginners.</p></div>
 		</div>
 		<div class="col-md-4 text-center"> 
 		<span class="icons c3"><i class="fa fa-desktop"></i></span> <div class="box-area">
@@ -197,7 +197,7 @@
             <div class="col-md-4">
 			<div class="textbox">
                   <h3>Advanced Programming</h3>
-				<p>Our more advanced Computer Science course for intermeditate to advanced coders focuses on tackling algorithmic problems through various coding methods. </p>
+				<p>Our more advanced Computer Science course for intermediate to advanced coders focuses on tackling algorithmic problems through various coding methods. </p>
             </div> </div>
 			<div class="col-md-4">
 			<div class="textbox">
@@ -209,17 +209,17 @@
             <div class="col-md-4">
 			<div class="textbox">
                 <h3>Algebra I and II</h3>
-				<p>These are two sepereate classes, but both are tailored to school curriculums with Algebra I having a focus on the basics of algebra, and Algebra II delving into more advance functions and triginometry.</p>
+				<p>These are two separate classes, but both are tailored to school curricula with Algebra I having a focus on the basics of algebra, and Algebra II delving into more advanced functions and trigonometry.</p>
             </div> </div>
             <div class="col-md-4">
 			<div class="textbox">
                   <h3>Calculus</h3>
-				<p>Our calculus program at Get Ahead focuses more on the central ideas of calculus and pre-calculus. We delve into limits and derivatives, but do not go into the more advanced ideas of calculus.</p>
+				<p>Our calculus program at Get Ahead focuses more on the central ideas of calculus and pre-calculus. We delve into limits and derivatives, but do not explore the more advanced concepts of calculus.</p>
             </div> </div>
 			<div class="col-md-4">
 			<div class="textbox">
                   <h3>Chemistry and Biology</h3>
-				<p>Two seperate courses, we follow a traditional curriculum of learning from experiments and theoretical knowledge. We offer fun, at-home experiments that students can do themselves.</p>
+				<p>Two separate courses, we follow a traditional curriculum of learning from experiments and theoretical knowledge. We offer fun, at-home experiments that students can do themselves.</p>
             </div> </div>
         </div>
 </div>
